* Ein wenig mit Logout() und Datums-Queries rumgemacht.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@7 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -12,5 +12,7 @@ logout.message=Wollen Sie sich wirklich ausloggen?
 logout.logout Logout
 logout.back zur\u00FCck
 change.title=Namens\u00E4nderung
-change.name=Name\: 
+change.name=Name\:
+change.birth=Geburtstag\:
 change.change=\u00C4ndern
+change.changed=Zuletzt ge\u00E4ndert\:
