--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -16,3 +16,4 @@ change.name=Name\:
 change.birth=Geburtstag\:
 change.change=\u00C4ndern
 change.changed=Zuletzt ge\u00E4ndert\:
+change.add=Neue Adresse
