--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -17,3 +17,8 @@ change.birth=Geburtstag\:
 change.change=\u00C4ndern
 change.changed=Zuletzt ge\u00E4ndert\:
 change.add=Neue Adresse
+change.address.street=Stra\u00DFe
+change.address.plz=PLZ
+change.address.location=Ort
+address.title=Adresse \u00E4ndern
+change.remove=L\u00F6schen
