* Enums als Optionen für Select Boxes.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@12 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,6 +1,4 @@
 ; ======================================================================================================
-; $Id$
-; ======================================================================================================
 start.title=Startseite
 start.name=Name\:
 start.change=Name \u00E4ndern
@@ -23,5 +21,6 @@ change.add=Neue Adresse
 change.address.street=Stra\u00DFe
 change.address.plz=PLZ
 change.address.location=Ort
+change.address.option=Adressart
 address.title=Adresse \u00E4ndern
 change.remove=L\u00F6schen
