* Converter gefällt mir jetzt als Inner Class besser.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@17 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -16,6 +16,7 @@ change.title=Namens\u00E4nderung
 change.name=Name\:
 change.birth=Geburtstag\:
 change.change=\u00C4ndern
+change.mail=EMail:
 change.changed=Zuletzt ge\u00E4ndert\:
 change.add=Neue Adresse
 change.address.street=Stra\u00DFe
