* Weitere Spalte in Adresse eingefügt.  * Bessere Back-Navigation.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@20 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -2,26 +2,30 @@
 start.title=Startseite
 start.name=Name\:
 start.change=Name \u00E4ndern
-start.logout=Logout
 login.user=User
 login.password=Passwort
 login.title=Einloggen
 login.login=Login
-login.clear=L\u00F6schen
 logout.title=Ausloggen
 logout.message=Wollen Sie sich wirklich ausloggen?
 logout.logout Logout
-logout.back zur\u00FCck
 change.title=Namens\u00E4nderung
 change.name=Name\:
 change.birth=Geburtstag\:
-change.change=\u00C4ndern
 change.mail=EMail:
 change.changed=Zuletzt ge\u00E4ndert\:
 change.add=Neue Adresse
 change.address.street=Stra\u00DFe
 change.address.plz=PLZ
 change.address.location=Ort
+change.address.active=Aktuell
 change.address.option=Adressart
 address.title=Adresse \u00E4ndern
-change.remove=L\u00F6schen
+back=zur\u00FCck
+yes=Ja
+no=Nein
+change=\u00C4ndern
+remove=L\u00F6schen
+clear=L\u00F6schen
+save=Speichern
+logout=Logout
