--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -3,6 +3,7 @@ start.title=Startseite
 start.name=Name\:
 start.change=Name \u00E4ndern
 login.user=User
+login.do_login=Bitte loggen Sie sich mit dem LDAP-Passwort ein.
 login.password=Passwort
 login.title=Einloggen
 login.login=Login
@@ -29,3 +30,6 @@ remove=L\u00F6schen
 clear=L\u00F6schen
 save=Speichern
 logout=Logout
+main=Hauptmen\u00FC
+footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
+menue=Men\u00FC
