* Beispiel Applikation hat jetzt generierte Entity Beans.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@45 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -34,3 +34,5 @@ main=Hauptmen\u00FC
 footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
 menue=Men\u00FC
 testmail=Test-EMail
+address.home=Wohnadresse
+address.work=Arbeitsstätte
