* Presentation Layer wird generiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@101 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -10,21 +10,23 @@ login.login=Login
 logout.title=Ausloggen
 logout.message=Wollen Sie sich wirklich ausloggen?
 logout.logout Logout
-change.title=Namens\u00E4nderung
-change.name=Name\:
-change.birth=Geburtstag\:
-change.mail=EMail:
-change.changed=Zuletzt ge\u00E4ndert\:
-change.add=Neue Adresse
-change.address.street=Stra\u00DFe
-change.address.plz=PLZ
-change.address.location=Ort
-change.address.active=Aktuell
-change.address.option=Adressart
-address.title=Adresse \u00E4ndern
+admin.userinfo.title=Namens\u00E4nderung
+admin.userinfo.name=Name\:
+admin.userinfo.birth=Geburtstag\:
+admin.userinfo.mail=EMail:
+admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
+admin.address.add=Neue Adresse
+admin.address.title=Adresse \u00E4ndern
+admin.address.street=Stra\u00DFe
+admin.address.plz=PLZ
+admin.address.location=Ort
+admin.address.active=Aktuell
+admin.address.option=Adressart
 back=zur\u00FCck
 yes=Ja
 no=Nein
+no_selection=-- leer --
+create=Anlegen
 change=\u00C4ndern
 remove=L\u00F6schen
 clear=L\u00F6schen
@@ -36,3 +38,9 @@ menue=Men\u00FC
 testmail=Test-EMail
 address.home=Wohnadresse
 address.work=Arbeitsstätte
+info.title=Informationen
+info.entityentry.title=Eintrag einer Entität
+info.entityentry.creation=Anlage
+info.entityentry.comment=Kommentar
+info.entityentry.addressoption=Adressart
+info.startup.title=Startup-Einträge
