--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -10,21 +10,23 @@ login.login=Login
 logout.title=Logout
 logout.message=Do you really want to logout?
 logout.logout Logout
-change.title=Name change
-change.name=Name\:
-change.birth=Date of birth\:
-change.mail=EMail:
-change.changed=Last changed\:
-change.add=New address
-change.address.street=Street
-change.address.plz=PLZ
-change.address.location=Location
-change.address.active=Actual
-change.address.option=Address type
-address.title=Address change
+admin.userinfo.title=Name change
+admin.userinfo.name=Name\:
+admin.userinfo.birth=Date of birth\:
+admin.userinfo.mail=EMail:
+admin.userinfo.changed=Last changed\:
+admin.address.add=New address
+admin.address.title=Address change
+admin.address.street=Street
+admin.address.plz=PLZ
+admin.address.location=Location
+admin.address.active=Actual
+admin.address.option=Address type
 back=back
 yes=Yes
 no=No
+no_selection=-- empty --
+create=Create
 change=Change
 remove=Remove
 clear=Clear
@@ -36,3 +38,9 @@ menue=Menu
 testmail=Test-EMail
 address.home=Home
 address.work=Work
+info.title=Informationen
+info.entityentry.title=Entity entry
+info.entityentry.creation=Creation
+info.entityentry.comment=Comment
+info.entityentry.addressoption=Address type
+info.startup.title=Startup eintries
