--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,46 +1,60 @@
-; ======================================================================================================
-start.title=Startseite
-start.name=Name\:
-start.change=Name \u00E4ndern
-login.user=User
-login.do_login=Bitte loggen Sie sich mit dem LDAP-Passwort ein.
-login.password=Passwort
-login.title=Einloggen
-login.login=Login
-logout.title=Ausloggen
+#Automatically extended
+#Fri Aug 17 11:51:54 CEST 2012
+info.entityentry.addressoption=Adressart
+change=\u00C4ndern
+testmail=Test-EMail
+info.startup.history=Verlauf
+main=Hauptmen\u00FC
 logout.message=Wollen Sie sich wirklich ausloggen?
-logout.logout Logout
-admin.userinfo.title=Namens\u00E4nderung
-admin.userinfo.name=Name\:
+logout.title=Ausloggen
+login.do_login=Bitte loggen Sie sich mit dem LDAP-Passwort ein.
+start.title=Startseite
 admin.userinfo.birth=Geburtstag\:
-admin.userinfo.mail=EMail:
-admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
-admin.address.add=Neue Adresse
+create=Anlegen
+footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
+info.title=Informationen
+admin.address.position=Position
 admin.address.title=Adresse \u00E4ndern
 admin.address.street=Stra\u00DFe
-admin.address.plz=PLZ
-admin.address.location=Ort
-admin.address.active=Aktuell
-admin.address.option=Adressart
-back=zur\u00FCck
-yes=Ja
-no=Nein
-no_selection=-- leer --
-create=Anlegen
-change=\u00C4ndern
-remove=L\u00F6schen
-clear=L\u00F6schen
-save=Speichern
 logout=Logout
-main=Hauptmen\u00FC
-footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
-menue=Men\u00FC
-testmail=Test-EMail
-address.home=Wohnadresse
-address.work=Arbeitsstätte
-info.title=Informationen
-info.entityentry.title=Eintrag einer Entität
+edit=Editieren
+save=Speichern
+admin.title=Verwaltung
+admin.address.addressoption=Addressart
 info.entityentry.creation=Anlage
+address.home=Wohnadresse
+info.startup.entities=Entit\u00E4ten
+admin=Admin
+admin.address.add=Neue Adresse
+info.startup.title=Startup-Eintr\u00E4ge
+info.entityentry.title=Eintrag einer Entit\u00E4t
+remove=L\u00F6schen
+admin.address.option=Adressart
+start.change=Name \u00E4ndern
+back=zur\u00FCck
+admin.userinfo.mail=EMail\:
+menue=Men\u00FC
+login=Login
+clear=L\u00F6schen
+admin.userinfo.title=Namens\u00E4nderung
+admin.address.active=Aktuell
+admin.userinfo.login=login
+no_selection=-- leer --
+start.name=Name\:
+options.deactivate=Deaktivieren
+admin.userinfo.name=Name\:
+login.user=Benutzer
+yes=Ja
+admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
+admin.address.plz=PLZ
+address.work=Arbeitsst\u00E4tte
+info=Info
+admin.address.location=Ort
+no=Nein
 info.entityentry.comment=Kommentar
-info.entityentry.addressoption=Adressart
-info.startup.title=Startup-Einträge
+login.title=Einloggen
+logout.logout=Logout
+options.activate=Aktivieren
+admin.userinfo.addresses=Adressen
+login.password=Passwort
+login.login=Login
