--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,46 +1,61 @@
-; ======================================================================================================
-start.title=Start page
-start.name=Name\:
-start.change=Change name
-login.user=User
-login.do_login=Please login.
-login.password=Password
-login.title=Login
-login.login=Login
-logout.title=Logout
+#Automatically extended
+#Fri Aug 17 12:19:00 CEST 2012
+info.entityentry.addressoption=Address type
+change=Change
+testmail=Test-EMail
+info.startup.history=history
+main=Main menu
 logout.message=Do you really want to logout?
-logout.logout Logout
-admin.userinfo.title=Name change
-admin.userinfo.name=Name\:
+logout.title=Logout
+login.do_login=Please login.
+start.title=Start page
 admin.userinfo.birth=Date of birth\:
-admin.userinfo.mail=EMail:
-admin.userinfo.changed=Last changed\:
-admin.address.add=New address
+create=Create
+footer=JSF 2.0 / EJB 3.1 / JEE 6 - test application
+info.title=Informationen
+admin.address.position=position
 admin.address.title=Address change
 admin.address.street=Street
-admin.address.plz=PLZ
-admin.address.location=Location
-admin.address.active=Actual
-admin.address.option=Address type
-back=back
-yes=Yes
-no=No
-no_selection=-- empty --
-create=Create
-change=Change
-remove=Remove
-clear=Clear
-save=Save
+;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 logout=Logout
-main=Main menu
-footer=JSF 2.0 / EJB 3.1 / JEE 6 - test application
-menue=Menu
-testmail=Test-EMail
-address.home=Home
-address.work=Work
-info.title=Informationen
-info.entityentry.title=Entity entry
+edit=Edit
+save=Save
+admin.title=Edit Admin
+admin.address.addressoption=addressOption
 info.entityentry.creation=Creation
-info.entityentry.comment=Comment
-info.entityentry.addressoption=Address type
+address.home=Home
+info.startup.entities=entities
+admin=Admin
+admin.address.add=New address
 info.startup.title=Startup eintries
+info.entityentry.title=Entity entry
+remove=Remove
+admin.address.option=Address type
+start.change=Change name
+back=back
+admin.userinfo.mail=EMail\:
+menue=Menu
+login=Login
+clear=Clear
+admin.userinfo.title=Name change
+admin.address.active=Actual
+admin.userinfo.login=login
+no_selection=-- empty --
+start.name=Name\:
+options.deactivate=Deactivate
+admin.userinfo.name=Name\:
+login.user=User
+yes=Yes
+admin.userinfo.changed=Last changed\:
+admin.address.plz=PLZ
+address.work=Work
+info=Info
+admin.address.location=Location
+no=No
+info.entityentry.comment=Comment
+login.title=Login
+logout.logout=Logout
+options.activate=Activate
+admin.userinfo.addresses=addresses
+login.password=Password
+login.login=Login
