--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,61 +1,62 @@
 #Automatically extended
-#Fri Aug 17 12:19:00 CEST 2012
-info.entityentry.addressoption=Address type
+#Tue Sep 18 08:39:58 CEST 2012
+;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
+address.home=Home
+address.work=Work
+admin=Admin
+admin.address.active=Actual
+admin.address.add=New address
+admin.address.addressoption=addressOption
+admin.address.location=Location
+admin.address.option=Address type
+admin.address.plz=PLZ
+admin.address.position=position
+admin.address.street=Street
+admin.address.title=Address change
+admin.title=Edit Admin
+admin.userinfo.addresses=addresses
+admin.userinfo.birth=Date of birth\:
+admin.userinfo.changed=Last changed\:
+admin.userinfo.image=image:
+admin.userinfo.login=login:
+admin.userinfo.mail=EMail\:
+admin.userinfo.name=Name\:
+admin.userinfo.title=Name change
+back=back
 change=Change
-testmail=Test-EMail
+clear=Clear
+create=Create
+edit=Edit
+footer=JSF 2.0 / EJB 3.1 / JEE 6 - test application
+info=Info
+info.entityentry.addressoption=Address type
+info.entityentry.comment=Comment
+info.entityentry.creation=Creation
+info.entityentry.title=Entity entry
+info.startup.entities=entities
 info.startup.history=history
-main=Main menu
+info.startup.title=Startup eintries
+info.title=Informationen
+login=Login
+login.do_login=Please login.
+login.login=Login
+login.password=Password
+login.title=Login
+login.user=User
+logout=Logout
+logout.logout=Logout
 logout.message=Do you really want to logout?
 logout.title=Logout
-login.do_login=Please login.
-start.title=Start page
-admin.userinfo.birth=Date of birth\:
-create=Create
-footer=JSF 2.0 / EJB 3.1 / JEE 6 - test application
-info.title=Informationen
-admin.address.position=position
-admin.address.title=Address change
-admin.address.street=Street
-;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
-logout=Logout
-edit=Edit
-save=Save
-admin.title=Edit Admin
-admin.address.addressoption=addressOption
-info.entityentry.creation=Creation
-address.home=Home
-info.startup.entities=entities
-admin=Admin
-admin.address.add=New address
-info.startup.title=Startup eintries
-info.entityentry.title=Entity entry
-remove=Remove
-admin.address.option=Address type
-start.change=Change name
-back=back
-admin.userinfo.mail=EMail\:
+main=Main menu
 menue=Menu
-login=Login
-clear=Clear
-admin.userinfo.title=Name change
-admin.address.active=Actual
-admin.userinfo.login=login
-no_selection=-- empty --
-start.name=Name\:
-options.deactivate=Deactivate
-admin.userinfo.name=Name\:
-login.user=User
-yes=Yes
-admin.userinfo.changed=Last changed\:
-admin.address.plz=PLZ
-address.work=Work
-info=Info
-admin.address.location=Location
 no=No
-info.entityentry.comment=Comment
-login.title=Login
-logout.logout=Logout
+no_selection=-- empty --
 options.activate=Activate
-admin.userinfo.addresses=addresses
-login.password=Password
-login.login=Login
+options.deactivate=Deactivate
+remove=Remove
+save=Save
+start.change=Change name
+start.name=Name\:
+start.title=Start page
+testmail=Test-EMail
+yes=Yes
