--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,60 +1,61 @@
 #Automatically extended
-#Fri Aug 17 11:51:54 CEST 2012
-info.entityentry.addressoption=Adressart
+#Tue Sep 18 08:39:58 CEST 2012
+address.home=Wohnadresse
+address.work=Arbeitsst\u00E4tte
+admin=Admin
+admin.address.active=Aktuell
+admin.address.add=Neue Adresse
+admin.address.addressoption=Addressart
+admin.address.location=Ort
+admin.address.option=Adressart
+admin.address.plz=PLZ
+admin.address.position=Position
+admin.address.street=Stra\u00DFe
+admin.address.title=Adresse \u00E4ndern
+admin.title=Verwaltung
+admin.userinfo.addresses=Adressen
+admin.userinfo.birth=Geburtstag\:
+admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
+admin.userinfo.image=Bild\:
+admin.userinfo.login=Login\:
+admin.userinfo.mail=EMail\:
+admin.userinfo.name=Name\:
+admin.userinfo.title=Namens\u00E4nderung
+back=zur\u00FCck
 change=\u00C4ndern
-testmail=Test-EMail
+clear=L\u00F6schen
+create=Anlegen
+edit=Editieren
+footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
+info=Info
+info.entityentry.addressoption=Adressart
+info.entityentry.comment=Kommentar
+info.entityentry.creation=Anlage
+info.entityentry.title=Eintrag einer Entit\u00E4t
+info.startup.entities=Entit\u00E4ten
 info.startup.history=Verlauf
-main=Hauptmen\u00FC
+info.startup.title=Startup-Eintr\u00E4ge
+info.title=Informationen
+login=Login
+login.do_login=Bitte loggen Sie sich mit dem LDAP-Passwort ein.
+login.login=Login
+login.password=Passwort
+login.title=Einloggen
+login.user=Benutzer
+logout=Logout
+logout.logout=Logout
 logout.message=Wollen Sie sich wirklich ausloggen?
 logout.title=Ausloggen
-login.do_login=Bitte loggen Sie sich mit dem LDAP-Passwort ein.
-start.title=Startseite
-admin.userinfo.birth=Geburtstag\:
-create=Anlegen
-footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
-info.title=Informationen
-admin.address.position=Position
-admin.address.title=Adresse \u00E4ndern
-admin.address.street=Stra\u00DFe
-logout=Logout
-edit=Editieren
-save=Speichern
-admin.title=Verwaltung
-admin.address.addressoption=Addressart
-info.entityentry.creation=Anlage
-address.home=Wohnadresse
-info.startup.entities=Entit\u00E4ten
-admin=Admin
-admin.address.add=Neue Adresse
-info.startup.title=Startup-Eintr\u00E4ge
-info.entityentry.title=Eintrag einer Entit\u00E4t
-remove=L\u00F6schen
-admin.address.option=Adressart
-start.change=Name \u00E4ndern
-back=zur\u00FCck
-admin.userinfo.mail=EMail\:
+main=Hauptmen\u00FC
 menue=Men\u00FC
-login=Login
-clear=L\u00F6schen
-admin.userinfo.title=Namens\u00E4nderung
-admin.address.active=Aktuell
-admin.userinfo.login=login
-no_selection=-- leer --
-start.name=Name\:
-options.deactivate=Deaktivieren
-admin.userinfo.name=Name\:
-login.user=Benutzer
-yes=Ja
-admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
-admin.address.plz=PLZ
-address.work=Arbeitsst\u00E4tte
-info=Info
-admin.address.location=Ort
 no=Nein
-info.entityentry.comment=Kommentar
-login.title=Einloggen
-logout.logout=Logout
+no_selection=-- leer --
 options.activate=Aktivieren
-admin.userinfo.addresses=Adressen
-login.password=Passwort
-login.login=Login
+options.deactivate=Deaktivieren
+remove=L\u00F6schen
+save=Speichern
+start.change=Name \u00E4ndern
+start.name=Name\:
+start.title=Startseite
+testmail=Test-EMail
+yes=Ja
