* Einige weitere Beispiele:    o PDF-Export hinzugefügt.    o Image Servlet in Hauptmenü eingehängt.    o Proxy Imaging eingefügt und in Hauptmenü eingehänt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@182 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -59,3 +59,6 @@ start.name=Name\:
 start.title=Startseite
 testmail=Test-EMail
 yes=Ja
+export=Export PDF
+image.title=Beispiel das per Servlet ein Image rendert
+greece.title=Webcams in Griechenland
