--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -60,3 +60,6 @@ start.name=Name\:
 start.title=Start page
 testmail=Test-EMail
 yes=Yes
+export=Export PDF
+image.title=Example for rendering an image inside a servlet
+greece.title=Webcams in Greece
