* History UI eingeführt.  * Schlüsselwort "strict" am Modell generiert ab jetzt    abstrakte Methoden.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@200 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Tue Sep 18 08:39:58 CEST 2012
+#Fri Oct 05 14:09:56 CEST 2012
 address.home=Wohnadresse
 address.work=Arbeitsst\u00E4tte
 admin=Admin
@@ -26,12 +26,19 @@ change=\u00C4ndern
 clear=L\u00F6schen
 create=Anlegen
 edit=Editieren
+export=Export PDF
 footer=JSF 2.0 / EJB 3.1 / JEE 6 - Probeapplikation
+greece.title=Webcams in Griechenland
+history=History
+image.title=Beispiel das per Servlet ein Image rendert
 info=Info
 info.entityentry.addressoption=Adressart
 info.entityentry.comment=Kommentar
 info.entityentry.creation=Anlage
 info.entityentry.title=Eintrag einer Entit\u00E4t
+info.historyentry.comment=comment
+info.historyentry.creation=creation
+info.historyentry.title=Edit HistoryEntry
 info.startup.entities=Entit\u00E4ten
 info.startup.history=Verlauf
 info.startup.title=Startup-Eintr\u00E4ge
@@ -59,6 +66,3 @@ start.name=Name\:
 start.title=Startseite
 testmail=Test-EMail
 yes=Ja
-export=Export PDF
-image.title=Beispiel das per Servlet ein Image rendert
-greece.title=Webcams in Griechenland
