--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Tue Sep 18 08:39:58 CEST 2012
+#Fri Oct 05 14:09:56 CEST 2012
 ;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 address.home=Home
 address.work=Work
@@ -17,8 +17,8 @@ admin.title=Edit Admin
 admin.userinfo.addresses=addresses
 admin.userinfo.birth=Date of birth\:
 admin.userinfo.changed=Last changed\:
-admin.userinfo.image=image:
-admin.userinfo.login=login:
+admin.userinfo.image=image\:
+admin.userinfo.login=login\:
 admin.userinfo.mail=EMail\:
 admin.userinfo.name=Name\:
 admin.userinfo.title=Name change
@@ -27,12 +27,19 @@ change=Change
 clear=Clear
 create=Create
 edit=Edit
+export=Export PDF
 footer=JSF 2.0 / EJB 3.1 / JEE 6 - test application
+greece.title=Webcams in Greece
+history=History
+image.title=Example for rendering an image inside a servlet
 info=Info
 info.entityentry.addressoption=Address type
 info.entityentry.comment=Comment
 info.entityentry.creation=Creation
 info.entityentry.title=Entity entry
+info.historyentry.comment=comment
+info.historyentry.creation=creation
+info.historyentry.title=Edit HistoryEntry
 info.startup.entities=entities
 info.startup.history=history
 info.startup.title=Startup eintries
@@ -60,6 +67,3 @@ start.name=Name\:
 start.title=Start page
 testmail=Test-EMail
 yes=Yes
-export=Export PDF
-image.title=Example for rendering an image inside a servlet
-greece.title=Webcams in Greece
