--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Fri Oct 05 14:09:56 CEST 2012
+#Wed Oct 17 15:39:27 CEST 2012
 address.home=Wohnadresse
 address.work=Arbeitsst\u00E4tte
 admin=Admin
@@ -13,6 +13,7 @@ admin.address.position=Position
 admin.address.street=Stra\u00DFe
 admin.address.title=Adresse \u00E4ndern
 admin.title=Verwaltung
+admin.userinfo.address.change=Edit addresses
 admin.userinfo.addresses=Adressen
 admin.userinfo.birth=Geburtstag\:
 admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
@@ -40,6 +41,7 @@ info.historyentry.comment=comment
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
 info.startup.entities=Entit\u00E4ten
+info.startup.entityentry.change=Edit entities
 info.startup.history=Verlauf
 info.startup.title=Startup-Eintr\u00E4ge
 info.title=Informationen
