--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Fri Oct 05 14:09:56 CEST 2012
+#Wed Oct 17 15:39:27 CEST 2012
 ;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 address.home=Home
 address.work=Work
@@ -14,6 +14,7 @@ admin.address.position=position
 admin.address.street=Street
 admin.address.title=Address change
 admin.title=Edit Admin
+admin.userinfo.address.change=Edit addresses
 admin.userinfo.addresses=addresses
 admin.userinfo.birth=Date of birth\:
 admin.userinfo.changed=Last changed\:
@@ -41,6 +42,7 @@ info.historyentry.comment=comment
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
 info.startup.entities=entities
+info.startup.entityentry.change=Edit entities
 info.startup.history=history
 info.startup.title=Startup eintries
 info.title=Informationen
