* Behandlung von 403er Fehler wird generiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@273 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/errors_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors_en.properties
@@ -1,6 +1,8 @@
 #Automatically extended
-#Tue Oct 30 15:30:11 CET 2012
+#Thu May 02 10:08:13 CEST 2013
 admin.userinfo.not-empty=Data of UserInfo is not empty\!
+code403.message=Access to the requested resource has been denied\!
+code403.title=Four oh three\!
 code404.message=The requested document was not found\!
 code404.title=Four oh four\!
 error.title=General application fault\!
