--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Wed Oct 17 15:39:27 CEST 2012
+#Thu May 09 20:07:21 CEST 2013
 address.home=Wohnadresse
 address.work=Arbeitsst\u00E4tte
 admin=Admin
@@ -67,4 +67,5 @@ start.change=Name \u00E4ndern
 start.name=Name\:
 start.title=Startseite
 testmail=Test-EMail
+welcome=Welcome to the JEE6 Test Application Application\!
 yes=Ja
