--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Wed Oct 17 15:39:27 CEST 2012
+#Thu May 09 20:07:21 CEST 2013
 ;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 address.home=Home
 address.work=Work
@@ -68,4 +68,5 @@ start.change=Change name
 start.name=Name\:
 start.title=Start page
 testmail=Test-EMail
+welcome=Welcome to the JEE6 Test Application Application\!
 yes=Yes
