* DB-Auth kann unterschiedliche Update Sites behandeln.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@304 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
+++ b/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Tue Jun 18 10:00:21 CEST 2013
+#Wed Jun 26 15:52:47 CEST 2013
 back=back
 change=Change
 clear=Clear
@@ -27,7 +27,16 @@ user.authinfo.expire=Expire
 user.authinfo.passorduncoded=PassordUncoded
 user.authinfo.password=Password
 user.authinfo.passworduncoded=PasswordUncoded
+user.authinfo.siteauthinfo.change=Edit sites
+user.authinfo.sites=Sites
 user.authinfo.title=Edit AuthInfo
+user.siteauthinfo.active=Active
+user.siteauthinfo.created=Created
+user.siteauthinfo.expire=Expire
+user.siteauthinfo.site=Site
+user.siteauthinfo.title=Edit SiteAuthInfo
+user.siteinfo.name=Name
+user.siteinfo.title=Edit SiteInfo
 user.title=Edit User
 welcome=Welcome to the DB-Auth Application\!
 yes=yes
