* Modell leicht umgebaut.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@316 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
+++ b/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Wed Jun 26 15:52:47 CEST 2013
+#Tue Jul 02 14:04:32 CEST 2013
 back=back
 change=Change
 clear=Clear
@@ -36,6 +36,7 @@ user.siteauthinfo.expire=Expire
 user.siteauthinfo.site=Site
 user.siteauthinfo.title=Edit SiteAuthInfo
 user.siteinfo.name=Name
+user.siteinfo.skuprefix=SkuPrefix
 user.siteinfo.title=Edit SiteInfo
 user.title=Edit User
 welcome=Welcome to the DB-Auth Application\!
