* Entfernen von Entities aus Listen müssen bestätigt werden.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@344 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,11 +1,12 @@
 #Automatically extended
-#Thu May 09 20:07:21 CEST 2013
+#Sun Dec 22 14:50:12 CET 2013
 address.home=Wohnadresse
 address.work=Arbeitsst\u00E4tte
 admin=Admin
 admin.address.active=Aktuell
 admin.address.add=Neue Adresse
 admin.address.addressoption=Addressart
+admin.address.confirm-remove=Do you really want to remove this address?
 admin.address.location=Ort
 admin.address.option=Adressart
 admin.address.plz=PLZ
@@ -17,6 +18,7 @@ admin.userinfo.address.change=Edit addresses
 admin.userinfo.addresses=Adressen
 admin.userinfo.birth=Geburtstag\:
 admin.userinfo.changed=Zuletzt ge\u00E4ndert\:
+admin.userinfo.confirm-remove=Do you really want to remove this userinfo?
 admin.userinfo.image=Bild\:
 admin.userinfo.login=Login\:
 admin.userinfo.mail=EMail\:
@@ -35,11 +37,14 @@ image.title=Beispiel das per Servlet ein Image rendert
 info=Info
 info.entityentry.addressoption=Adressart
 info.entityentry.comment=Kommentar
+info.entityentry.confirm-remove=Do you really want to remove this entityentry?
 info.entityentry.creation=Anlage
 info.entityentry.title=Eintrag einer Entit\u00E4t
 info.historyentry.comment=comment
+info.historyentry.confirm-remove=Do you really want to remove this historyentry?
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
+info.startup.confirm-remove=Do you really want to remove this startup?
 info.startup.entities=Entit\u00E4ten
 info.startup.entityentry.change=Edit entities
 info.startup.history=Verlauf
