--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Thu May 09 20:07:21 CEST 2013
+#Sun Dec 22 14:50:13 CET 2013
 ;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 address.home=Home
 address.work=Work
@@ -7,6 +7,7 @@ admin=Admin
 admin.address.active=Actual
 admin.address.add=New address
 admin.address.addressoption=addressOption
+admin.address.confirm-remove=Do you really want to remove this address?
 admin.address.location=Location
 admin.address.option=Address type
 admin.address.plz=PLZ
@@ -18,6 +19,7 @@ admin.userinfo.address.change=Edit addresses
 admin.userinfo.addresses=addresses
 admin.userinfo.birth=Date of birth\:
 admin.userinfo.changed=Last changed\:
+admin.userinfo.confirm-remove=Do you really want to remove this userinfo?
 admin.userinfo.image=image\:
 admin.userinfo.login=login\:
 admin.userinfo.mail=EMail\:
@@ -36,11 +38,14 @@ image.title=Example for rendering an image inside a servlet
 info=Info
 info.entityentry.addressoption=Address type
 info.entityentry.comment=Comment
+info.entityentry.confirm-remove=Do you really want to remove this entityentry?
 info.entityentry.creation=Creation
 info.entityentry.title=Entity entry
 info.historyentry.comment=comment
+info.historyentry.confirm-remove=Do you really want to remove this historyentry?
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
+info.startup.confirm-remove=Do you really want to remove this startup?
 info.startup.entities=entities
 info.startup.entityentry.change=Edit entities
 info.startup.history=history
