--- a/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
+++ b/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Tue Jul 02 14:04:32 CEST 2013
+#Sun Dec 22 14:50:50 CET 2013
 back=back
 change=Change
 clear=Clear
@@ -21,6 +21,7 @@ start.name=Full name
 start.title=Welcome to DB-Auth\!
 user=User
 user.authinfo.active=Active
+user.authinfo.confirm-remove=Do you really want to remove this authinfo?
 user.authinfo.created=Created
 user.authinfo.email=Email
 user.authinfo.expire=Expire
@@ -31,10 +32,12 @@ user.authinfo.siteauthinfo.change=Edit sites
 user.authinfo.sites=Sites
 user.authinfo.title=Edit AuthInfo
 user.siteauthinfo.active=Active
+user.siteauthinfo.confirm-remove=Do you really want to remove this siteauthinfo?
 user.siteauthinfo.created=Created
 user.siteauthinfo.expire=Expire
 user.siteauthinfo.site=Site
 user.siteauthinfo.title=Edit SiteAuthInfo
+user.siteinfo.confirm-remove=Do you really want to remove this siteinfo?
 user.siteinfo.name=Name
 user.siteinfo.skuprefix=SkuPrefix
 user.siteinfo.title=Edit SiteInfo
