* Tests für Cloneables.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@364 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/messages.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Sun Dec 22 14:50:12 CET 2013
+#Thu Jan 30 17:28:04 CET 2014
 address.home=Wohnadresse
 address.work=Arbeitsst\u00E4tte
 admin=Admin
@@ -44,10 +44,15 @@ info.historyentry.comment=comment
 info.historyentry.confirm-remove=Do you really want to remove this historyentry?
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
+info.startup.changed=Changed
 info.startup.confirm-remove=Do you really want to remove this startup?
+info.startup.creation=Creation
+info.startup.dateelement=DateElement
 info.startup.entities=Entit\u00E4ten
 info.startup.entityentry.change=Edit entities
 info.startup.history=Verlauf
+info.startup.timestamp1=Timestamp1
+info.startup.timestamp2=Timestamp2
 info.startup.title=Startup-Eintr\u00E4ge
 info.title=Informationen
 login=Login
