--- a/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/messages_en.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Sun Dec 22 14:50:13 CET 2013
+#Thu Jan 30 17:28:04 CET 2014
 ;=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=\=
 address.home=Home
 address.work=Work
@@ -45,10 +45,15 @@ info.historyentry.comment=comment
 info.historyentry.confirm-remove=Do you really want to remove this historyentry?
 info.historyentry.creation=creation
 info.historyentry.title=Edit HistoryEntry
+info.startup.changed=Changed
 info.startup.confirm-remove=Do you really want to remove this startup?
+info.startup.creation=Creation
+info.startup.dateelement=DateElement
 info.startup.entities=entities
 info.startup.entityentry.change=Edit entities
 info.startup.history=history
+info.startup.timestamp1=Timestamp1
+info.startup.timestamp2=Timestamp2
 info.startup.title=Startup eintries
 info.title=Informationen
 login=Login
